--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "vite": "vite",
+        "dev": "concurrently \"php artisan serve\" \"npm run vite\""
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
+        "@sveltejs/vite-plugin-svelte": "3.0.2",
+        "autoprefixer": "^10.4.21",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
+        "laravel-vite-plugin": "1.0.6",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.17",
+        "vite": "^4.5.2"
     },
     "dependencies": {
         "@inertiajs/progress": "^0.1.2",
         "@inertiajs/svelte": "^2.1.3",
-        "svelte": "^5.38.6"
+        "axios": "^1.7.2",
+        "svelte": "^4.2.9"
     }
 }
