--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/progress": "^0.1.2",
         "@inertiajs/svelte": "^2.1.3",
         "axios": "^1.7.2",
+        "lodash": "^4.17.21",
         "svelte": "^4.2.9"
     }
 }
