--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "3.0.2",
         "autoprefixer": "^10.4.21",
-        "concurrently": "^9.0.1",
+        "concurrently": "9.0.1",
         "laravel-vite-plugin": "1.0.6",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^3.4.17",
-        "vite": "^4.5.2"
+        "postcss": "8.5.6",
+        "tailwindcss": "3.4.17",
+        "vite": "4.5.2"
     },
     "dependencies": {
         "@inertiajs/progress": "^0.1.2",
-        "@inertiajs/svelte": "^2.1.3",
-        "axios": "^1.7.2",
-        "lodash": "^4.17.21",
-        "svelte": "^4.2.9"
+        "@inertiajs/svelte": "2.1.3",
+        "axios": "1.7.2",
+        "lodash": "4.17.21",
+        "svelte": "4.2.9"
     }
 }
